--- a/resources/assets/sass/base/_variables.scss
+++ b/resources/assets/sass/base/_variables.scss
@@ -1,8 +1,12 @@
 /** Variables **/
-$light: 400;
-$normal: 300;
+$thin: 100;
+$extra_light: 200;
+$light: 300;
+$normal: 400;
+$semibold: 500;
 $bold: 700;
-$extrabold: 900;
+$extrabold: 800;
+$black: 900;
 
 $lightYellow: #FFB600;
 $darkYellow: #FF9800;
