--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,6 +53,18 @@ body {
   z-index: 3;
   text-align: center;
   font-family: inherit;
+
+  .social_media {
+    margin-top: 36px;
+    a {
+      display: inline-block;
+      padding: 4px 20px;
+      color: white;
+      text-decoration: none;
+      font-size: 2.2em;
+      line-height: 1em;
+    }
+  }
 }
 .wrapper > .content > #logo {
   position: relative;
