--- a/resources/assets/sass/base/_reset.scss
+++ b/resources/assets/sass/base/_reset.scss
@@ -92,6 +92,7 @@ template {
 
 a {
   background-color: transparent;
+  color: $darkYellow;
 }
 
 /**
@@ -428,4 +429,10 @@ table {
 td,
 th {
   padding: 0;
+}
+
+
+.responsive-image {
+  max-width: 100%;
+  height: auto;
 }
