--- a/resources/assets/sass/base/_variables.scss
+++ b/resources/assets/sass/base/_variables.scss
@@ -12,6 +12,8 @@ $lightYellow: #FFB600;
 $darkYellow: #FF9800;
 $lightGreen: #00E163;
 $darkGreen: #00B44D;
+$mangoLightRed: #f96166;
+$mangoRed: #FC4035;
 
 $hackerBlue: #10356E;
 
