--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -354,7 +354,7 @@ a {
 }
 
 .footer {
-  background: #2b2b2b;
+  background: $hackerBlue;
   padding: 40px 0;
   text-align: center;
   color: white;
