--- a/resources/assets/sass/components/_grid.scss
+++ b/resources/assets/sass/components/_grid.scss
@@ -1,10 +1,12 @@
 .grid {
-  .row {
-    display: flex;
-    align-items: center;
-    user-select: space-around;
-    .col-6 {
-      flex: 1 1 50%;
+    .row {
+        display: flex;
+        align-items: center;
+        user-select: space-around;
+        .col-6 {
+            @include min-bp(640px) {
+                flex: 1 1 50%;
+            }
+        }
     }
-  }
 }
