--- a/resources/assets/sass/components/_main_nav.scss
+++ b/resources/assets/sass/components/_main_nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  z-index: 5;
+  z-index: 25;
   position: absolute;
   width: 100%;
   padding: 8px 0;
@@ -20,28 +20,86 @@
       padding: 6px 8px;
     }
   }
+  .mobile-trigger {
+      display: none;
+      font-size: 1.5em;
+      list-style: 1em;
+      color: white;
+      &.active {
+          display: block;
+      }
+  }
+  .mobile-close {
+      display: none;
+      font-size: 1.5em;
+      list-style: 1em;
+      color: white;
+      &.active {
+          display: block;
+      }
+  }
+  @include min-bp(490px) {
+    .mobile-trigger {
+        display: none;
+        &.active {
+            display: none;
+        }
+    }
+  }
 }
 .sticky-wrapper {
-  z-index: 5;
+  z-index: 25;
   position: absolute;
   width: 100%;
   .nav {
-    background: rgba(white,0);
+    background: rgba($hackerBlue, .8);
     transition: background .3s ease-in-out;
+    position: relative;
+    .menu {
+        display: none;
+        &.active {
+            position: absolute;
+            display: block;
+            top: 100%;
+            left: 0;
+            text-align: center;
+            width: 100%;
+            padding: 10px;
+            background: rgba(16, 53, 110, 0.8);
+            a {
+                display: block;
+                padding: 8px;
+            }
+        }
+    }
     .logo {
-      opacity: 0;
+      opacity: 1;
       transition: opacity .3s ease-in-out;
     }
   }
-  &.is-sticky {
-    .nav {
-      background: rgba($hackerBlue, .8);
-      .logo {
-        opacity: 1;
+  @include min-bp(490px) {
+      .nav {
+        background: none;
+        .menu {
+            display: inline-block;
+        }
+        .logo {
+          opacity: 0;
+          transition: opacity .3s ease-in-out;
+        }
       }
-    }
+      &.is-sticky {
+        .nav {
+          background: rgba($hackerBlue, .8);
+          .logo {
+            opacity: 1;
+          }
+        }
+      }
   }
 }
+
+
 
 
 #mlh-trust-badge {
@@ -54,6 +112,6 @@
     width:10%;
     min-width: 60px;
     display:block;
-    z-index:10;
+    z-index:50;
   }
 }
