--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -447,3 +447,122 @@ a {
     }
   }
 }
+
+
+.tracks-wrap {
+  background: url('/img/lhd_shot.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  color: white;
+  padding: 80px 0;
+  text-align: center;
+  .heading {
+    color: white;
+    margin-bottom: 52px;
+    &:after {
+      background: white;
+    }
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba($darkYellow, .85);
+  }
+  .container {
+    position: relative;
+    z-index: 2;
+  }
+  p {
+    font-size: 20px;
+    line-height: 1.4em;
+    margin-bottom: 24px;
+  }
+  @include min-bp(490px) {
+    padding: 124px 0;
+    p {
+      font-size: 22px;
+      line-height: 1.5em;
+    }
+  }
+  a {
+    color: white;
+    font-weight: $bold;
+    opacity: 1;
+    text-decoration: underline;
+    transition: opacity .2s ease-in-out;
+    &:hover {
+      opacity: .8;
+    }
+    &.button {
+        text-decoration: none;
+        font-size: 1.3em;
+        padding: 24px 50px;
+    }
+  }
+}
+.anchors-wrap {
+    a {
+      font-size: 20px;
+      line-height: 1.5em;
+    }
+    padding: 20px 0 20px;
+    @include min-bp(490px) {
+      padding: 40px 0 40px;
+      a {
+        font-size: 26px;
+        line-height: 1.6em;
+      }
+    }
+    .container {
+        display: flex;
+        justify-content: space-around;
+        a {
+            text-align: center;
+            font-weight: bold;
+            display: inline-block;
+            line-height: 1em;
+            border-radius: 4px;
+            padding: 20px 17px;
+            transition: all .2s ease-in-out;
+            box-shadow: none;
+            &[href='#green'] {
+                color: $darkGreen;
+            }
+            &[href='#yellow'] {
+                color: $darkYellow;
+            }
+            &[href='#red'] {
+                color: $mangoRed;
+            }
+            &:hover {
+                box-shadow: 3px 3px 10px 0px #D0D0D0;
+            }
+        }
+    }
+}
+
+.flavor-wrap {
+    p {
+      font-size: 18px;
+      line-height: 1.5em;
+    }
+    padding: 60px 0 60px;
+    @include min-bp(490px) {
+      padding: 80px 0 80px;
+      p {
+        font-size: 22px;
+        line-height: 1.6em;
+      }
+    }
+    &#yellow .heading:after {
+        background: $darkYellow;
+    }
+    &#red .heading:after {
+        background: $mangoRed;
+    }
+}
