ok for real now

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -760,7 +760,7 @@ a {
         line-height: 1.6em; } }
 
 .what-wrap {
-  background: url("/img/lhd_shot.jpg");
+  background: url("/img/splash.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
