--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -132,7 +132,7 @@ a {
 }
 
 .what-wrap {
-  background: url('/img/lhd_shot.jpg');
+  background: url('/img/splash.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
