--- a/resources/assets/sass/components/_grid.scss
+++ b/resources/assets/sass/components/_grid.scss
@@ -2,10 +2,21 @@
     .row {
         display: flex;
         align-items: center;
-        user-select: space-around;
+        justify-content: space-around;
+        .col-12 {
+            @include min-bp(640px) {
+                flex: 1 1 100%;
+            }
+        }
         .col-6 {
             @include min-bp(640px) {
                 flex: 1 1 50%;
+            }
+        }
+        .col-4 {
+            flex: 0 1 50%;
+            @include min-bp(640px) {
+                flex: 0 1 25%;
             }
         }
     }
