--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -222,9 +222,26 @@ a {
   }
 }
 
-.shedule-wrap {
-  background: $hackerBlue;
+.schedule-wrap {
+  background: url('/img/atrium.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
   padding: 80px 0;
+  color: white;
+  &:after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba($hackerBlue, .85);
+  }
+  .container {
+    position: relative;
+    z-index: 2;
+  }
   @include min-bp(490px) {
     padding: 124px 0;
   }
@@ -242,6 +259,34 @@ a {
     color: white;
     font-size: 24px;
     line-height: 1.5em;
+  }
+  .days {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .day {
+    flex: 1 1 100%;
+    @include min-bp(490px) {
+      flex: 1 1 33.33%;
+      padding: 0 12px;
+      font-size: 1.2em;
+    }
+    .times {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      li {
+        display: flex;
+        margin-bottom: 16px;
+      }
+      .time {
+        color: $lightYellow;
+        font-weight: $bold;
+        display: inline-block;
+        margin-right: 25px;
+        flex: 0 0 30%;
+      }
+    }
   }
 }
 
@@ -314,10 +359,10 @@ a {
 }
 
 .partners-wrap, .sponsors-wrap {
-    a.logo-wrap {
-        display: inline-block;
-        padding: 40px 10px;
-    }
+  a.logo-wrap {
+      display: inline-block;
+      padding: 40px 10px;
+  }
   .col-12 {
       text-align: center;
       .logo {
@@ -609,4 +654,25 @@ a {
     &#red .heading:after {
         background: $mangoRed;
     }
+  .day {
+    flex: 1 1 100%;
+    font-size: 1.2em;
+    margin-bottom: 16px;
+    .times {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      li {
+        display: flex;
+        margin-bottom: 16px;
+      }
+      .time {
+        color: $lightYellow;
+        font-weight: $bold;
+        display: inline-block;
+        margin-right: 25px;
+        flex: 0 0 30%;
+      }
+    }
+  }
 }
