--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -682,6 +682,13 @@ a {
 
 
 .live {
+  .links {
+    padding: 30px 0;
+    text-align: center;
+  }
+  .flavor-wrap {
+    padding: 20px 0;
+  }
   .updates, .schedule {
 
     > h2 {
