--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,7 +27,7 @@ a {
   position: relative;
   height: 100%;
   z-index: 1;
-  background-image: url("/img/pg6.jpg");
+  background-image: url("/img/mentoringbw.jpg");
   background-size: cover;
 }
 .wrapper > .overlay {
@@ -39,7 +39,7 @@ a {
   z-index: 2;
 }
 .wrapper .translucentBlue {
-  background: rgba($hackerBlue, .5)
+  background: rgba(black, .3)
 }
 .wrapper > .content {
   position: absolute;
@@ -71,9 +71,9 @@ a {
   max-width: 360px;
   width: 100%;
   z-index: 3;
-  margin-bottom: 42px;
+  margin-bottom: 4px;
   @include min-bp(490px) {
-    margin-bottom: 72px;
+    margin-bottom: 8px;
     max-width: 420px;
   }
 }
@@ -349,6 +349,12 @@ a {
   }
   &:hover {
     background: $darkGreen;
+    &.secondary {
+      background: $darkYellow;
+    }
+    &.danger {
+      background: $mangoRed;
+    }
     &.sponsor {
       background: $darkYellow;
     }
@@ -454,11 +460,15 @@ a {
 }
 
 .footer {
-  background: $hackerBlue;
+  background: lighten(black, 5%);
   padding: 40px 0;
   text-align: center;
   color: white;
   a {
+    color: white;
+    text-decoration: underline;
+  }
+  .social_media a {
     color: white;
     font-weight: $semibold;
     opacity: 1;
